--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@ body, html {
   width: 100%;
 }
 
+img {
+  width: 100%;
+  height: 100%;
+}
+
 body #header {
   position: fixed;
   z-index: 3;
@@ -21,7 +26,19 @@ body #header .phone .navbar ul {
   padding-left: 30px;
 }
 body #main {
-  top: 40px;
+  padding-top: 80px;
+}
+body #main #myCarousel {
+  padding: 0;
+}
+body #main #myCarousel div {
+  text-shadow: 0px 0px 6px black;
+}
+body #main #myCarousel div h3 {
+  font-size: 30px;
+}
+body #main .presentation h4 {
+  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
