--- a/css/style.scss
+++ b/css/style.scss
@@ -5,6 +5,10 @@ $vert:#299C04;
 body,html{
   width: 100%;
 }
+img{
+  width: 100%;
+  height: 100%;
+}
 
 // BEGIN
 
@@ -33,6 +37,20 @@ body{
     }
   }
   #main{
-    top: 40px;
+    padding-top: 80px;
+    #myCarousel{
+      padding: 0;
+      div{
+        text-shadow: 0px 0px 6px black ;
+        h3{
+          font-size: 30px;
+        }
+      }
+    }
+    .presentation{
+      h4{
+        text-align: center;
+      }
+    }
   }
 }
