homepage >footer >done

--- a/css/style.css
+++ b/css/style.css
@@ -41,4 +41,19 @@ body #main .presentation h4 {
   text-align: center;
 }
 
+#footer {
+  margin-top: 50px;
+  padding-top: 50px;
+  position: relative;
+  background-color: grey;
+  padding-bottom: 100px;
+}
+#footer .cardcoach {
+  height: 190px;
+  width: 190px;
+}
+#footer .cardcoach .coach img {
+  border-radius: 50%;
+}
+
 /*# sourceMappingURL=style.css.map */
