--- a/css/style.scss
+++ b/css/style.scss
@@ -54,3 +54,22 @@ body{
     }
   }
 }
+
+#footer{
+  margin-top: 50px;
+  padding-top: 50px;
+  position: relative;
+  background-color: grey;
+  padding-bottom: 100px;
+  .cardcoach{
+    height: 190px;
+    width: 190px;
+
+    .coach{
+      img{
+        border-radius: 50%;
+
+      }
+    }
+  }
+}
