--- a/css/style.scss
+++ b/css/style.scss
@@ -73,3 +73,19 @@ body{
     }
   }
 }
+
+
+// CONTACT PAGE ///////////////////--/////////---///////--/////--///-//-/-
+#main{
+  .form{
+    .well-block {
+        background-color: #fff;
+        border: 1px solid #e9e6e8;
+        padding: 40px;
+    }
+
+    .well-title {
+        margin-bottom: 40px;
+    }
+  }
+}
