--- a/css/style.scss
+++ b/css/style.scss
@@ -89,3 +89,11 @@ body{
     }
   }
 }
+
+// TARIFS PAGE ///////////////////--/////////---///////--/////--///-//-/-
+#calendar{
+  td{
+    text-align: center;
+    border: 1px solid #000;
+  }
+}
