--- a/css/style.scss
+++ b/css/style.scss
@@ -18,6 +18,10 @@ body{
     position: fixed ;
     z-index: 3;
     width: 100%;
+    .navbar-brand{
+      font-weight: bold;
+      font-size: 26px;
+    }
     .desktop{
       a{
         width: 60%;
@@ -60,7 +64,11 @@ body{
   padding-top: 50px;
   position: relative;
   background-color: grey;
-  padding-bottom: 100px;
+  padding-bottom: 80px;
+  h2{
+    color: black;
+    font-weight: bold;
+  }
   .cardcoach{
     height: 190px;
     width: 190px;
