--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,9 @@ body #header .navbar-brand {
   font-weight: bold;
   font-size: 26px;
 }
+body #header .desktop .navbar {
+  background-color: #5CA650;
+}
 body #header .desktop a {
   width: 60%;
 }
@@ -23,6 +26,7 @@ body #header .desktop .nav {
   width: 40px;
 }
 body #header .phone .navbar {
+  background-color: #5CA650;
   padding-bottom: 10px;
   padding: 0;
 }
@@ -41,15 +45,24 @@ body #main #myCarousel div {
 body #main #myCarousel div h3 {
   font-size: 30px;
 }
+body #main .presentation .card-footer {
+  background-color: #8DCF8A !important;
+}
 body #main .presentation h4 {
   text-align: center;
+}
+body #main .presentation blockquote {
+  margin-top: 30px;
+  box-shadow: 0 0 7px 0 #ededed;
+  line-height: 1.8em;
+  font-size: 24px;
 }
 
 #footer {
   margin-top: 50px;
   padding-top: 50px;
   position: relative;
-  background-color: grey;
+  background-color: #8DCF8A;
   padding-bottom: 80px;
 }
 #footer h2 {
