--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,6 @@
-$clair:#5CC83A;
-$fonce:#186200;
-$vert:#299C04;
+$clair:#8DCF8A;
+$fonce:#1B630F;
+$vert:#5CA650;
 
 body,html{
   width: 100%;
@@ -23,6 +23,9 @@ body{
       font-size: 26px;
     }
     .desktop{
+      .navbar{
+        background-color: $vert;
+      }
       a{
         width: 60%;
       }
@@ -32,6 +35,7 @@ body{
     }
     .phone{
       .navbar{
+        background-color: $vert;
         padding-bottom: 10px;
         padding: 0 ;
         ul{
@@ -52,8 +56,17 @@ body{
       }
     }
     .presentation{
+      .card-footer{
+        background-color: $clair !important;
+      }
       h4{
         text-align: center;
+      }
+      blockquote{
+        margin-top: 30px;
+        box-shadow: 0 0 7px 0 #ededed;
+        line-height: 1.8em;
+        font-size: 24px;
       }
     }
   }
@@ -63,7 +76,7 @@ body{
   margin-top: 50px;
   padding-top: 50px;
   position: relative;
-  background-color: grey;
+  background-color: $clair;
   padding-bottom: 80px;
   h2{
     color: black;
@@ -72,7 +85,6 @@ body{
   .cardcoach{
     height: 190px;
     width: 190px;
-
     .coach{
       img{
         border-radius: 50%;
