--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body, html {
   width: 100%;
+  overflow-x: hidden;
 }
 
 img {
@@ -17,7 +18,7 @@ body #header .navbar-brand {
   font-size: 26px;
 }
 body #header .desktop .navbar {
-  background-color: #5CA650;
+  background-color: #bbe599;
 }
 body #header .desktop a {
   width: 60%;
@@ -26,12 +27,32 @@ body #header .desktop .nav {
   width: 40px;
 }
 body #header .phone .navbar {
-  background-color: #5CA650;
+  background-color: #bbe599;
   padding-bottom: 10px;
   padding: 0;
 }
 body #header .phone .navbar ul {
   padding-left: 30px;
+}
+body .homepic {
+  padding-top: 2vh;
+  position: relative;
+  width: 100vw;
+  margin: 0;
+}
+body .homepic h1 {
+  position: absolute;
+  margin-left: 50%;
+  left: -20vw;
+  top: 60%;
+  font-weight: bold;
+  color: white;
+  font-size: 8vw;
+  text-shadow: 0 0 3px grey;
+  line-height: 0.3em;
+}
+body .homepic h1 span {
+  font-size: 2.5vw;
 }
 body #main {
   padding-top: 80px;
@@ -46,7 +67,7 @@ body #main #myCarousel div h3 {
   font-size: 30px;
 }
 body #main .presentation .card-footer {
-  background-color: #8DCF8A !important;
+  background-color: #659E36 !important;
 }
 body #main .presentation h4 {
   text-align: center;
@@ -62,7 +83,7 @@ body #main .presentation blockquote {
   margin-top: 50px;
   padding-top: 50px;
   position: relative;
-  background-color: #8DCF8A;
+  background-color: #d8d8d8;
   padding-bottom: 80px;
 }
 #footer h2 {
