--- a/css/style.scss
+++ b/css/style.scss
@@ -29,6 +29,7 @@ body{
       }
       a{
         width: 60%;
+        font-weight: bold;
       }
       .nav{
         width: 40px;
@@ -39,8 +40,17 @@ body{
         background-color: $vert;
         padding-bottom: 10px;
         padding: 0 ;
+        button{
+          border-color: transparent;
+        }
+        .navbar-brand{
+          max-height: 50px;
+        }
         ul{
           padding-left: 30px;
+          a{
+            font-weight: bold;
+          }
         }
       }
     }
@@ -92,6 +102,9 @@ body{
         font-size: 24px;
       }
     }
+    .tarifcard{
+      margin-top: 20px;
+    }
   }
 }
 
@@ -99,21 +112,14 @@ body{
   margin-top: 50px;
   padding-top: 50px;
   position: relative;
-  background-color: #d8d8d8;
+  background-color: #78B49A;
   padding-bottom: 80px;
   h2{
     color: black;
     font-weight: bold;
   }
-  .cardcoach{
-    height: 190px;
-    width: 190px;
-    .coach{
-      img{
-        border-radius: 50%;
-
-      }
-    }
+  .card{
+    margin-top: 20px;
   }
 }
 
